# photon

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  USAGE.md  ast_demo.cpp  main.cpp
compiler/: CMakeLists.txt
compiler/common/: CMakeLists.txt
compiler/common/include/photon/common/: types.hpp
compiler/diagnostics/: CMakeLists.txt
compiler/diagnostics/benchmarks/: CMakeLists.txt  diagnostic_benchmark.cpp
compiler/diagnostics/include/photon/diagnostics/: diagnostic.hpp  diagnostic_engine.hpp  formatter.hpp  source_location.hpp
compiler/diagnostics/src/: diagnostic_engine.cpp  formatter.cpp  source_location.cpp
compiler/diagnostics/tests/: CMakeLists.txt  diagnostic_test.cpp  formatter_test.cpp  source_location_test.cpp
compiler/lexer/: CMakeLists.txt
compiler/lexer/include/photon/lexer/: lexer.hpp  token.hpp
compiler/lexer/src/: lexer.cpp  token.cpp
compiler/lexer/tests/: CMakeLists.txt  lexer_test.cpp
compiler/memory/: CMakeLists.txt
compiler/memory/benchmarks/: CMakeLists.txt  arena_bench.cpp
compiler/memory/include/photon/memory/: arena.hpp  arena_impl.hpp
compiler/memory/tests/: CMakeLists.txt  arena_test.cpp
compiler/parser/: CMakeLists.txt
compiler/parser/include/photon/parser/: ast.hpp  parser.hpp
compiler/parser/src/: ast.cpp  parser.cpp
compiler/parser/tests/: CMakeLists.txt  test_ast.cpp  test_declarations.cpp  test_error_recovery.cpp  test_expressions.cpp  test_parser.cpp  test_statements.cpp
compiler/source/: CMakeLists.txt
compiler/source/include/photon/source/: source_manager.hpp
compiler/source/src/: source_manager.cpp
compiler/source/tests/: CMakeLists.txt  source_manager_test.cpp
docs/: _MConverter.eu_Photon Programming Language Documentation.md  guidelines.md  instructions.md
examples/: expressions.ph  functions.ph  simple.ph  test.ph
