# Photon Compiler Components

# Add compiler subdirectories
add_subdirectory(common)
add_subdirectory(memory)

# Main compiler executable will be added as components are implemented
# add_subdirectory(lexer)
# add_subdirectory(parser)
# add_subdirectory(ast)
# add_subdirectory(types)
# add_subdirectory(analysis)
# add_subdirectory(codegen)
# add_subdirectory(driver)